fixed picture size on mobile

--- a/styles.css
+++ b/styles.css
@@ -185,8 +185,11 @@ a:visited:hover {
 .avatar {
   width: 20%;
   float: right;
-  border-radius: 5%;
+  border-radius: 50%;
   margin-right: 2em;
+  -moz-box-shadow: 3px 3px 5px 6px #ccc;
+  -webkit-box-shadow: 3px 3px 5px 6px #ccc;
+  box-shadow: 3px 3px 5px 6px #ccc;
 }
 
 .left {
@@ -389,12 +392,10 @@ a:visited:hover {
   }
   .avatar {
     display: block;
-    -moz-box-shadow: 3px 3px 5px 6px #ccc;
-    -webkit-box-shadow: 3px 3px 5px 6px #ccc;
-    box-shadow: 3px 3px 5px 6px #ccc;
     float: none;
-    margin: 5% auto auto 5%;
-    width: 90%;
+    margin: 25% auto auto 25%;
+    border-radius: 5%;
+    width: 50%;
   }
 }
 
